--- a/stylesheet.css
+++ b/stylesheet.css
@@ -32,8 +32,8 @@ body {
 	line-height: 1;
 	padding: 0;
 	margin: 0;
-	background: linear-gradient(to right,pink, lightblue);
-	font-style: sans-serif;
+	background: white
+	font-style: arial;
 }
 ol, ul {
 	list-style: none;
@@ -66,6 +66,8 @@ table {
 	border: 2px solid gray;
 	outline: none;
 	background-color: lightgray;
+	border-radius: 5px;
+	padding: 5px;
 }
 
 .container > button:hover {
@@ -78,13 +80,14 @@ table {
 
 #display {
 	grid-column: 1 / -1;
-	background-color: skyblue;
+	background: linear-gradient(to right,pink, lightblue);
 	border: 2px solid gray;
 	display: flex;
 	align-items: flex-end;
 	justify-content: space-between;
 	flex-direction: column;
-	padding: 10px;
+	border-radius: 5px;
+	padding: 5px;
 	word-wrap: break-word;
 	word-break: break-all;
 }
